Fix responsive alignment

--- a/assets/css/base/variables.css
+++ b/assets/css/base/variables.css
@@ -31,7 +31,7 @@
     --space-xs: calc(var(--gutter) / 3);
     --space-s: calc(var(--gutter) / 4);
     --space-m: var(--gutter);
-    --space-l: calc(var(--gutter) * 2);
+    --space-l: calc(var(--gutter) * 1.5);
     --space-xl: calc(var(--gutter) * 3);
     --space-xxl: calc(var(--gutter) * 4);
 
